# ContextForLLM

./: .gitignore  LICENSE  README.md  app.py  context_builder.py  install.sh  pyproject.toml  requirements.txt  run.sh
contextforllm/: __main__.py  app.py  project_summary.py
contextforllm/ui/: index.html
ui/: index.html
